# PAOO

./: README.md
T1/: CMakeLists.txt
T1/headers/: CMakeLists.txt  adresa.hpp  blat.hpp  persoana.hpp  pizza.hpp  suc.hpp
T1/main/: CMakeLists.txt  main.cpp
T1/src/: CMakeCache.txt  CMakeLists.txt  Makefile  adresa.cpp  cmake_install.cmake  main.cpp  persoana.cpp  pizza  pizza.cpp  pizza.hpp  suc.cpp
T1/src/subsrc/: CMakeLists.txt
